<resources>
    <string name="app_name">Android_ProjectNoteApp</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="note_title">Note Title</string>
    <string name="type_note_here">Type note here</string>
    <string name="mixed_things">Mixed Things</string>
    <string name="pick_color">Pick Color</string>
</resources>