<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.CreateNoteActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        >
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/imageBack"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/Icons"

            />
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/imageSave"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/background_done_button"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_done"
            app:layout_constraintBottom_toBottomOf="@+id/imageBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageBack"
            app:tint="@color/Icons" />
        
        <EditText
            android:id="@+id/inputNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/note_title"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="true"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/TextHint"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toBottomOf="@+id/imageBack"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textDateTime"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:textColor="@color/Icons"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@+id/inputNoteTitle"
            app:layout_constraintStart_toStartOf="@+id/inputNoteTitle"
            app:layout_constraintTop_toBottomOf="@+id/inputNoteTitle"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/inputNoteSubtitle"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_medium"
            android:hint="@string/note_subtitle"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textColor="@color/TextSubtitle"
            android:textColorHint="@color/TextHint"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/viewSubtitleIndicator"
            app:layout_constraintTop_toTopOf="@+id/textDateTime"

            />
        <View
            android:layout_width="@dimen/_5sdp"
            android:layout_height="0dp"
            android:id="@+id/viewSubtitleIndicator"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@drawable/background_subtitle_indicator"
            app:layout_constraintBottom_toBottomOf="@+id/inputNoteSubtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputNote"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="top"
            android:hint="@string/type_note_here"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:minHeight="@dimen/_100sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/TextHint"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputNoteSubtitle"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>