<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".activities.MainActivity">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/textMyNotes"
       android:layout_marginStart="@dimen/_12sdp"
       android:layout_marginTop="@dimen/_20sdp"
       android:layout_marginEnd="@dimen/_12sdp"
       android:fontFamily="@font/ubuntu_bold"
       android:includeFontPadding="false"
       android:text="@string/my_notes"
       android:textColor="@color/white"
       android:textSize="@dimen/_20sdp"
       app:layout_constraintTop_toTopOf="parent"
       />
   <LinearLayout
       android:id="@+id/layoutSearch"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="@dimen/_8sdp"
       android:layout_marginTop="@dimen/_15sdp"
       android:layout_marginEnd="@dimen/_8sdp"
       android:background="@drawable/background_search"
       android:gravity="center_vertical"
       android:orientation="horizontal"
       android:paddingStart="@dimen/_10sdp"
       android:paddingEnd="@dimen/_10sdp"
       app:layout_constraintTop_toBottomOf="@+id/textMyNotes"
      >
      <ImageView
          android:layout_width="@dimen/_20sdp"
          android:layout_height="@dimen/_20sdp"
          android:contentDescription="@string/app_name"
          android:src="@drawable/ic_search"
          app:tint="@color/SearchIcon" />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="@dimen/_35sdp"
          android:id="@+id/inputSearch"
          android:layout_marginStart="@dimen/_12sdp"
          android:background="@null"
          android:fontFamily="@font/ubuntu_regular"
          android:hint="@string/search_notes"
          android:imeOptions="actionDone"
          android:importantForAutofill="no"
          android:includeFontPadding="false"
          android:inputType="text"
          android:textColor="@color/white"
          android:textColorHint="@color/TextHint"
          android:textSize="@dimen/_14sdp"
          />
   </LinearLayout>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/noteRecyclerView"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginStart="@dimen/_2sdp"
       android:layout_marginEnd="@dimen/_2sdp"
       android:clipToPadding="false"
       android:paddingEnd="@dimen/_12sdp"
       android:paddingStart="0dp"
       android:paddingBottom="@dimen/_12sdp"
       app:layout_constraintBottom_toTopOf="@+id/layoutQuickAction"
       app:layout_constraintTop_toBottomOf="@+id/layoutSearch"
       />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/layoutQuickAction"
       android:background="@color/QuickActionsBackground"
       android:gravity="center_vertical"
       android:orientation="horizontal"
       android:padding="@dimen/_12sdp"
       app:layout_constraintBottom_toBottomOf="parent"
       >

<!--      <ImageView-->
<!--          android:layout_width="@dimen/_26sdp"-->
<!--          android:layout_height="@dimen/_26sdp"-->
<!--          android:id="@+id/imageAddNote"-->
<!--          android:layout_marginStart="@dimen/_15sdp"-->
<!--          android:contentDescription="App Name"-->
<!--          android:src="@drawable/ic_add_outline"-->
<!--          app:tint="@color/Icons" />-->
<!--      <ImageView-->
<!--          android:layout_width="@dimen/_26sdp"-->
<!--          android:layout_height="@dimen/_26sdp"-->
<!--          android:id="@+id/imageAddImage"-->
<!--          android:layout_marginStart="@dimen/_15sdp"-->
<!--          android:contentDescription="App Name"-->
<!--          android:src="@drawable/ic_baseline_image_24"-->
<!--          app:tint="@color/Icons" />-->
<!--      <ImageView-->
<!--          android:layout_width="@dimen/_26sdp"-->
<!--          android:layout_height="@dimen/_26sdp"-->
<!--          android:id="@+id/imageWebLink"-->
<!--          android:layout_marginStart="@dimen/_15sdp"-->
<!--          android:contentDescription="App Name"-->
<!--          android:src="@drawable/ic_web_link"-->
<!--          app:tint="@color/Icons" />-->
   </LinearLayout>
   <ImageView
       android:id="@+id/imageAddNoteMain"
       android:layout_width="@dimen/_45sdp"
       android:layout_height="@dimen/_45sdp"
       android:layout_marginEnd="@dimen/_30sdp"
       android:background="@drawable/background_add_button"
       android:contentDescription="@string/app_name"
       android:padding="@dimen/_5sdp"
       android:src="@drawable/ic_add"
       app:layout_constraintBottom_toTopOf="@id/layoutQuickAction"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="@id/layoutQuickAction"
       app:tint="@color/primary" />

</androidx.constraintlayout.widget.ConstraintLayout>